2015-04-20  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* BrowserWindow.xml:
	* X3DBrowserWidget.h:
	* X3DBrowserEditor.cpp:
	* X3DBrowserWidget.cpp:
	* FileSaveDialog.h:
	* FileSaveDialog.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2015-04-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.in: 

2015-04-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am: 

2015-04-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.in: 

2015-04-15  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp: 

2015-04-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.cproj:
	* FadeOut.wrl:
	* FadeOut.x3dv:
	* EaseInEaseOut.wrl:
	* EaseInEaseOut.x3dv: 

2015-04-15  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl:
	* X3DBrowserEditor.h:
	* X3DBrowserWidget.h:
	* X3DBrowserEditor.cpp:
	* X3DBrowserWidget.cpp: 

2015-04-14  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl:
	* X3DBrowserWidget.cpp: 

2015-04-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.cproj: 

2015-03-27  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.cproj:
	* Units.svg: 

2015-03-26  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.cproj:
	* ComposedWidgets.h:
	* SFRotationAdjustment.h:
	* X3DViewpointEditor.h:
	* X3DGeoViewpointEditor.h:
	* X3DOrthoViewpointEditor.h:
	* X3DTransformEditor.h:
	* X3DGeoTransformEditor.h: 

2015-03-26  Holger Seelig  <holger.seelig@yahoo.de>

	* PrecisionPlacementPanel.cpp: 

2015-03-26  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* PrecisionPlacementPanel.cpp: 

2015-03-25  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* Makefile.in: 

2015-03-25  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.in: 

2015-03-24  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.in:
	* Titania.pidb:
	* Titania.cproj: 

2015-03-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Fields.pl: