@@ -1,3 +1,9 @@
+2015-04-23  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* BrowserSelection.cpp:
+	* X3DBrowserWidget.cpp:
+	* X3DBrowserEditor.cpp: 
+
 2015-04-20  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* titania:
